TrialoftheTitansPackage/main/default/objects/Experience__c/Experience__c.object-meta.xml
<CustomObject>
    <label>Experience</label>
    <nameField>
        <label>Experience Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experiences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>