TrialoftheTitansPackage/main/default/objects/Experience__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Name of the company</description>
    <label>Company</label>
    <length>45</length>
    <required>true</required>
    <type>Text</type>
</CustomField>