TrialoftheTitansPackage/main/default/objects/Experience__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Position held at the company</description>
    <label>Position</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>